[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
