[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
django-bootstrap4 = "^21.2"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"
django-crispy-forms = "^1.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
